--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -3,3 +3,8 @@
     justify-content: center;
     align-items: center;
 }
+
+@mixin FullViewPort {
+    height: calc(100vh - 80px);
+    width: 100vw;
+}
