--- a/src/styles/components/Footer.module.scss
+++ b/src/styles/components/Footer.module.scss
@@ -10,7 +10,7 @@
     text-decoration: none;
     width: 100vw;
     // background-color: rgb(48, 48, 48);
-    background-color: rgb(255, 219, 88);
+    background-color: #ffc018;
     // height: 200px;
     padding-top: 10px;
 
