--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -24,7 +24,8 @@ $logo_size: 2rem;
     top: 0px;
     left: 0px;
     z-index: 100000;
-    background-color: rgb(255, 219, 88);
+
+    background-color: #ffc018;
 
     .logo {
         font: $logo_font;
