--- a/src/styles/pages/Contact.module.scss
+++ b/src/styles/pages/Contact.module.scss
@@ -1,6 +1,93 @@
 @use "../base/mixins";
+@use "../base/typography"as ty;
 
-.container {
+
+.contactContainer {
     @include mixins.center();
     margin-top: 80px;
+    flex-direction: column;
+    font-family: ty.$font;
+    min-height: calc(100vh - 260px);
+
+    h1 {
+        width: 75%;
+        justify-content: left;
+
+    }
+
+
+    .linkContainer {
+
+        .linkCard {
+            // background-color: red;
+            box-shadow: 2px 2px 3px;
+            margin: 1rem;
+            padding: 1rem;
+            display: grid;
+
+            .icon {
+                grid-column-start: 1;
+                grid-column-end: 2;
+                grid-row-start: 1;
+                grid-row-end: 4;
+            }
+
+            .name {
+                grid-column-start: 2;
+                grid-column-end: 3;
+                grid-row-start: 1;
+                grid-row-end: 2;
+                padding: 0px 1rem;
+                margin: 0;
+            }
+
+            .id {
+                grid-column-start: 2;
+                grid-column-end: 3;
+                grid-row-start: 2;
+                grid-row-end: 3;
+                padding: 0px 1rem;
+                margin: 0;
+            }
+
+            .link {
+                grid-column-start: 2;
+                grid-column-end: 3;
+                grid-row-start: 3;
+                grid-row-end: 4;
+                padding: 0px 1rem;
+                margin: 0;
+                text-decoration: none;
+                transition: 0.3s;
+                color: blue;
+
+            }
+
+            .link:hover {
+                transform: translateX(5px)
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 1050px) {
+    .linkContainer {
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }
+}
+
+@media only screen and (max-width: 1050px) and (min-width: 600px) {
+    .linkContainer {
+        display: grid;
+        grid-template-columns: auto auto;
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    .linkContainer {
+        display: grid;
+        grid-template-columns: auto;
+    }
 }
