--- a/src/styles/pages/Error.module.scss
+++ b/src/styles/pages/Error.module.scss
@@ -3,5 +3,5 @@
 .container {
     @include mixins.center();
     margin-top: 80px;
-    height: calc(100vh - 260px);
+    min-height: calc(100vh - 260px);
 }
