--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -78,11 +78,13 @@
             border-bottom: 3px solid #ffc018;
             min-height: 100px;
             padding-left: 10px;
+            transition: 0.3s;
 
             .head {
                 @include mixins.center();
                 justify-content: left;
                 margin-top: 1rem;
+                position: relative;
             }
 
             .subheading {
@@ -90,12 +92,32 @@
                 margin-left: 0.5rem;
                 transition: 0.3s;
             }
+
+            .icon {
+                transition: 0.3s;
+            }
+
+            .caret {
+                position: absolute;
+                right: 2px;
+            }
+
+            .test {
+                background-color: red;
+                height: 100px;
+            }
         }
+
 
         section:hover {
             .subheading {
                 margin-left: 1rem;
             }
+
+            .icon {
+                transform: scale(1.2);
+            }
+
         }
     }
 }
