--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -15,6 +15,7 @@ $logo_color: rgb(0, 0, 0);
 $logo_size: 2rem;
 
 .nav {
+
     font-family: $nav_font;
     font-size: $nav_size;
     display: flex;
@@ -26,6 +27,10 @@ $logo_size: 2rem;
     z-index: 100000;
 
     background-color: #ffc018;
+
+    .flex {
+        @include mixins.center();
+    }
 
     .logo {
         font: $logo_font;
@@ -44,15 +49,14 @@ $logo_size: 2rem;
         margin-right: 10%;
 
         .vl {
-            border-width: 0.1px;
+            border-width: 0.2px;
             border-style: solid;
-            height: 30%;
+            height: 24px;
             color: $nav_color;
         }
 
         .links {
             @include mixins.center();
-            color: $nav_color;
             text-decoration: none;
             font-weight: $nav_weight;
             margin: 1rem 2rem;
@@ -60,9 +64,76 @@ $logo_size: 2rem;
         }
 
         .links:hover {
-            color: $nav_hover_color;
             transform: scale(1.2);
         }
 
+        .hamburger {
+            background-color: #ffc018;
+            color: $nav_color;
+            border: none;
+            transition: 0.3s;
+            position: absolute;
+            z-index: 1000000;
+        }
+
+        .hamburger:hover {
+            transform: scale(1.2);
+            color: $nav_hover_color;
+        }
+
+    }
+}
+
+@media only screen and (min-width: 700px) {
+    .navLinks {
+        @include mixins.center();
+    }
+
+    .navLinksHamburger {
+        display: none;
+    }
+
+    .links {
+        color: $nav_color;
+    }
+
+    .links:hover {
+        color: $nav_hover_color;
+    }
+
+    .hamburger {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .navLinks {
+        display: none;
+    }
+
+    .navLinksHamburger {
+        @include mixins.center();
+        flex-direction: column;
+        position: absolute;
+        top: 80px;
+        right: 0px;
+        width: 100%;
+        background-color: white;
+
+        .links {
+            color: $nav_color;
+        }
+
+        .links:hover {
+            color: $nav_hover_color;
+        }
+
+        .vl {
+            display: none;
+        }
+    }
+
+    .hamburger {
+        display: block;
     }
 }
