--- a/index.css
+++ b/index.css
@@ -1,4 +1,9 @@
 body {
     margin: 0;
     padding: 0;
+    -webkit-user-select: none;
+    /* Safari */
+    -ms-user-select: none;
+    /* IE 10 and IE 11 */
+    user-select: none;
 }
