--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -40,6 +40,7 @@ $logo_size: 2rem;
         font-weight: $logo_weight;
         margin: 1rem 1rem;
         margin-left: 10%;
+        @include mixins.center();
     }
 
     .navContainer {
