--- a/src/styles/components/Progressbar.module.scss
+++ b/src/styles/components/Progressbar.module.scss
@@ -44,3 +44,15 @@
         transform: translateX(5px);
     }
 }
+
+@media only screen and (max-width: 800px) {
+    .skillContainer {
+        font-size: 15px;    
+        .subheading {
+            font-family: ty.$font;
+            font-style: italic;
+            color: rgb(99, 99, 99);
+        }
+    }
+    
+}
